--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: node_js
 node_js: node
 cache: yarn
 script: yarn run site
-branches:
-  only:
-  - master
+deploy:
+  provider: pages
+  local_dir: build/site
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  on:
+    branch: master
