upgrade yarn before using

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 dist: trusty
 sudo: false
+git:
+  depth: 10
 language: node_js
 node_js: node
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - libstdc++-4.9-dev
+#addons:
+#  apt:
+#    sources:
+#    - ubuntu-toolchain-r-test
+#    packages:
+#    - libstdc++-4.9-dev
 cache: yarn
+before_install: npm install -g yarn
 script: yarn run site
 deploy:
   provider: pages
