try to fix install of node packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
-dist: trusty
+#dist: trusty
 sudo: false
 git:
   depth: 10
 language: node_js
-node_js: node
-#addons:
-#  apt:
-#    sources:
-#    - ubuntu-toolchain-r-test
-#    packages:
-#    - libstdc++-4.9-dev
+#node_js: node
+node_js: 7
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - build-essential
+    - libssl-dev
+    - gcc-4.9-multilib
+    - g++-4.9-multilib
+    #- libstdc++-4.9-dev
 cache: yarn
 before_install: npm install -g yarn
 script: yarn run site
