--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,10 @@ sudo: false
 git:
   depth: 10
 language: node_js
-#node_js: node
 node_js: 7
-#addons:
-#  apt:
-#    sources:
-#    - ubuntu-toolchain-r-test
-#    packages:
-#    - build-essential
-#    - libssl-dev
-#    - gcc-4.9-multilib
-#    - g++-4.9-multilib
 cache: yarn
 before_install: npm install -g yarn
-#script: yarn run site
-script: yarn --version
+script: yarn run site
 deploy:
   provider: pages
   local_dir: build/site
