--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "opendevise-site-generator-express": "https://gitlab.com/opendevise-projects/opendevise-site-generator-express#v1.5.0-beta.4"
   },
   "scripts": {
-    "site": "node -e \"require('opendevise-site-generator-express')\""
+    "generate": "node -e \"require('opendevise-site-generator-express')\""
   }
 }
