--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_deploy: touch build/site/.nojekyll
 deploy:
   provider: pages
   local_dir: build/site
+  project_name: MuleSoft Docs Site
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   on:
