Node 8 is a no go

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
 git:
   depth: 10
 language: node_js
-node_js: node
+node_js: 7
 cache: yarn
 before_install: npm install -g yarn
 script: yarn run generate
