rename generate script to generator

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ language: node_js
 node_js: 7
 cache: yarn
 before_install: npm install -g yarn
-script: yarn run generate
+script: yarn run generator
 before_deploy: touch build/site/.nojekyll
 deploy:
   provider: pages
