--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "opendevise-site-generator-express": "https://gitlab.com/opendevise-projects/opendevise-site-generator-express#v1.5.0-beta.4"
   },
   "scripts": {
-    "generate": "node -r opendevise-site-generator-express -e ''"
+    "generator": "node -r opendevise-site-generator-express -e ''"
   }
 }
