add license field to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mulesoft-docs-site",
+  "license": "UNLICENSED",
   "dependencies": {
     "opendevise-site-generator-express": "https://gitlab.com/opendevise-projects/opendevise-site-generator-express#v1.5.0-beta.4"
   },
